{
    "name": "TouchAction",
    "maps": [
        {
            "name": "Touch",
            "id": "dd30e903-03cf-4031-ad55-405b33e2b49b",
            "actions": [
                {
                    "name": "MovePlayer",
                    "type": "Value",
                    "id": "a85f9460-472c-4db7-aa02-ad10614fd081",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "b3e886fc-cee2-41cf-a4ff-0f6e880d4b67",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchTest",
                    "type": "Value",
                    "id": "ed86127b-2d27-475e-865e-13d6679d530b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e1ec2cd8-1271-44b0-8f80-32c1d5888756",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveCameraNew",
                    "type": "Value",
                    "id": "fd4595b2-3074-44a1-b461-ebb95f5bd4f4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f44e5537-6af4-4d7e-9d25-7d83bf827a8b",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d71b83a7-2531-4353-8a93-709075138b6a",
                    "path": "<Touchscreen>/position",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e72fda9-1144-4c47-b197-5ac0cc38aa23",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1433fdf7-e3ea-48ec-8d91-67887aab2ed9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08c79392-cc3a-4307-8e64-e9219e28b0d9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraNew",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}